cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description:
  This cloudformation template will create an ec2 instance of type t2.micro and security grp http tcp ssh open...its in my public github


Resources:
  WebServerSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Open port 80 and 22
      GroupName: KittenWebServerSG
      SecurityGroupIngress: 
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22 
      VpcId: vpc-0251d3b4626ae566c 
  WebServer: 
     Type: AWS::EC2::Instance
     Properties: 
       ImageId: ami-0b5eea76982371e91
       InstanceType: t2.micro
       KeyName: key-pair-ambika-us-east-1
       SecurityGroupIds: 
         - !Ref WebServerSG
       SubnetId: subnet-0f57cd3c871311884
       Tags: 
         - Key: Name
           Value: Web_Server
       UserData: 
         Fn::Base64: |
           #!/bin/bash
           yum install httpd -y 
           cd /var/www/html
           FOLDER="https://raw.githubusercontent.com/Ambika019/Static-App-CloudFormation/main/static-web"
           wget $FOLDER/index.html
           wget $FOLDER/cat0.jpg
           wget $FOLDER/cat1.jpg
           wget $FOLDER/cat2.jpg
           wget $FOLDER/cat3.png
           systemctl.enable.httpd
           systemctl start httpd
Outputs:
  WebServerPublicIP:
    Value: !Sub 
      - "http://${KittenPublicIp}"
      - KittenPublicIp: !GetAtt WebServer.PublicIp
    Description: Public IP for Kittens Web Server
